[gd_scene load_steps=6 format=3 uid="uid://cuapipgjafxq7"]

[ext_resource type="PackedScene" uid="uid://db0mbtfe3bs6x" path="res://exports/key_placeholder.gltf" id="1_6y22b"]
[ext_resource type="Script" path="res://scripts/scenes/key_placeholder.gd" id="2_svg2w"]
[ext_resource type="Script" path="res://scripts/components/grid_bound.gd" id="3_rjii8"]
[ext_resource type="Script" path="res://scripts/components/player_tracker.gd" id="4_yimcf"]
[ext_resource type="PackedScene" uid="uid://ccnuoxs23ntro" path="res://scenes/objects/marker3d.tscn" id="5_yw58q"]

[node name="key_placeholder" instance=ExtResource("1_6y22b")]
script = ExtResource("2_svg2w")

[node name="GridBoundComponent" type="Node3D" parent="." index="1"]
script = ExtResource("3_rjii8")

[node name="PlayerTrackerComponent" type="Node3D" parent="." index="2" node_paths=PackedStringArray("grid_bound")]
script = ExtResource("4_yimcf")
grid_bound = NodePath("../GridBoundComponent")

[node name="Marker3d" parent="." index="3" instance=ExtResource("5_yw58q")]

[connection signal="input_event" from="key/StaticBody3D" to="." method="_on_static_body_3d_input_event"]
